# oknix

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  json.cpp  json.hpp  main.cpp  validator.cpp  validator.hpp
test/: CMakeLists.txt  json_test.cpp  main.cpp
